added view to view the package clicked. created some logos. need to fix css and not break shit with bootstrap

--- a/pages/main/partials/head.ejs
+++ b/pages/main/partials/head.ejs
@@ -7,7 +7,7 @@
     <!-- 
       - favicon
     -->
-    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+    
   
     <!-- 
       - custom css link
@@ -25,5 +25,5 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet">
-   
+   <link rel="shortcut icon" href="/assets/images/Transparent_logo.png" type="image/x-icon">
 </head>
