--- a/pages/main/partials/navbar.ejs
+++ b/pages/main/partials/navbar.ejs
@@ -10,8 +10,8 @@
 
           <div class="navbar-top">
 
-            <a href="#" class="logo">
-              <img src="/assets/images/logo-blue.svg" alt="Tourly logo">
+            <a href="/" class="logo">
+              <img src="/assets/images/Transparent_logo.png" alt="Tourly logo">
             </a>
 
             <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
@@ -48,9 +48,10 @@
 
         </nav>
         <% if (user) { %>
-         
-          <h3>Welcome <%= user.fullname %></h3>
           <button class="navLog" ><a href = "logout"class="btn btn-primary"> logout</a></button>
+          <button class="navLog" ><a href = "accManagement"class="btn btn-primary"> Manage Account</a></button>
+         
+         
           <% if (user.category === "Admin") { %>
           <button class="navLog" ><a href = "admin"class="btn btn-primary"> admin</a></button>
            
@@ -59,7 +60,6 @@
           <% } else { %> 
             <button class="navLog" ><a href = "register"class="btn btn-primary"> login</a></button>
             <button class="navLog" ><a href = "signup"class="btn btn-primary"> signup</a></button>
-            <button class="navLog" ><a href = "accManagement"class="btn btn-primary"> Manage Account</a></button>
             <% } %>
 
       </div>
