--- a/pages/main/profile.ejs
+++ b/pages/main/profile.ejs
@@ -651,6 +651,14 @@ section:not(.cta) :is(.section-subtitle, .section-title, .section-text) {
 footer {
   padding:  1rem;
   width: 100%;
+  height: 50px;
+  /*... other styles... */
+  clear: both;
+  
+  min-height: 100%;
+  margin-bottom: -50px; /* same height as the footer */
+
+
 }
 
 footer .footer {
@@ -773,6 +781,7 @@ font-size: 13px;
 line-height: 1.8;
 font: inherit;
 }
+
 
 /* about us section ends here */
 
