--- a/pages/main/profile.ejs
+++ b/pages/main/profile.ejs
@@ -1019,7 +1019,7 @@ background-color: var(--gainsboro);
   
     <div style="height: 5vh;"></div>
   <!-- views/profile.ejs -->
-<form id="profileForm" action="/users/profile" method="POST" enctype="multipart/form-data">
+<form id="profileForm"  enctype="multipart/form-data">
     <div>
       <label for="fullname">Full Name</label>
       <input type="text" id="fullname" name="fullname" value="<%= user.fullname %>">
