very basic cleanup

--- a/pages/main/profile.ejs
+++ b/pages/main/profile.ejs
@@ -1035,7 +1035,7 @@ background-color: var(--gainsboro);
     
     <div>
       <label for="password">Password (leave blank to keep current password)</label>
-      <input type="password" id="password" name="password">
+      <input type="password" id="password" name="password" value="<%= user.password %>">
       <div id="passErr"></div>
     </div>
     
