--- a/pages/main/index.ejs
+++ b/pages/main/index.ejs
@@ -106,18 +106,26 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <img src="https://th.bing.com/th/id/OIP.b6qtJyin9FIupoD4yfCmQgHaF7?w=189&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="Image 1">
+        <p> BEST TIME TO VISIT EGYPT</p>
       </div>
       <div class="swiper-slide">
         <img src="https://th.bing.com/th/id/OIP.MqDQlRok5CYqMZ5Jkn9XNQAAAA?w=145&h=155&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="Image 2">
+        <p> WHERE TO STAY IN CAIRO</p>
       </div>
       <div class="swiper-slide">
-        <img src="https://th.bing.com/th/id/OIP.d6aNF7WZn41acpGfc4X5XQHaE9?w=276&h=185&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="Image 3">
+        <img src="https://th.bing.com/th/id/OIP.OJwypVJywCVCQFpUGoMOPAAAAA?w=158&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+        <p> 10 BEST THINGS TO DO IN EGYPT</p>
+
       </div>
       <div class="swiper-slide">
-        <img src="https://th.bing.com/th/id/OIP.9OaRTIKFDVZbRzvgt1WqtgHaFj?w=215&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="Image 4">
-      </div>
+        <img src="https://th.bing.com/th/id/OIP.LFowPaDTEu-e56p-3v-Q3gHaFj?w=229&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+        <p> IS EGYPT SAFE TO TRAVEL TO?</p>
+
+            </div>
       <div class="swiper-slide">
-        <img src="https://th.bing.com/th/id/OIP.p1-7PqFmUkWuGCEw5vlWXgHaE7?w=282&h=188&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="Image 5">
+        <img src="https://th.bing.com/th/id/OIP.LTdtASgDqHwil-zWSdrstgHaEd?w=280&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+        <p>BEST VIEW TO LOOK</p>
+
       </div>
       <!-- Add more slides as needed -->
     </div>
