added booking form rendering for the package and added capacity property to the package schema

--- a/pages/adminstuff/menus/pkg/addPKG.ejs
+++ b/pages/adminstuff/menus/pkg/addPKG.ejs
@@ -63,7 +63,14 @@
           <div id="endAt_error" class="invalid-tooltip" > Add an ending date</div>
         </div>
       </div>
-
+      <div class="mb-3 px-5">
+        <div class="form-floating">
+          <input type="number" class="form-control" id="capacity" name="capcity" required />
+          <label for="capacity" class="form-label">Capcity</label>
+          <div id="capacity_succ" class="valid-tooltip" > Looks good</div>
+          <div id="capacity_error" class="invalid-tooltip" > Add a capacity</div>
+        </div>
+      </div>
       <input type="submit" class="btn px-5 py-2 mx-5 my-2 btn-primary" value="Submit">
         
     </input>
