--- a/pages/main/index.ejs
+++ b/pages/main/index.ejs
@@ -99,6 +99,7 @@
 
     
           </ul>
+          <div></div>
 <!-- New Section for Tours BYy TYPE-->
 <div class="daily-tours">
   <h2 class="daily-tours-title">TOURS BY TYPE</h2>
@@ -121,7 +122,7 @@
         <img src="https://th.bing.com/th/id/OIP.LFowPaDTEu-e56p-3v-Q3gHaFj?w=229&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
         <p> IS EGYPT SAFE TO TRAVEL TO?</p>
 
-            </div>
+      </div>
       <div class="swiper-slide">
         <img src="https://th.bing.com/th/id/OIP.LTdtASgDqHwil-zWSdrstgHaEd?w=280&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
         <p>BEST VIEW TO LOOK</p>
@@ -134,12 +135,11 @@
     <!-- Add Navigation -->
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
-    <!-- Add Scrollbar -->
-    <div class="swiper-scrollbar"></div>
+
   </div>
 
   <!-- Swiper JS -->
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script defer src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
