feat: added public api for ez 5 points. removed some useless links . INSTALLED NODEMAILER. i hate mongoose

--- a/pages/adminstuff/menus/pkg/viewPKG.ejs
+++ b/pages/adminstuff/menus/pkg/viewPKG.ejs
@@ -6,7 +6,7 @@
 <% packs.forEach(element => { %>
  <div class="container">
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4 text-light">
       <h3><%= element.name %></h3>
       <p><%= element.description %></p>
       <p>Location: <%= element.location %></p>
