--- a/pages/main/viewallpackages.ejs
+++ b/pages/main/viewallpackages.ejs
@@ -12,7 +12,7 @@
   <li>
     <div class="package-card">
   
-      <figure class="card-banner"  onclick="window.location.href='/package/<%= packs[i]._id %>'">
+      <figure class="card-banner" loading="lazy">
         <img src="/assets/images/package1.jpg" alt= <%= packs[i].name %> loading="lazy" >
       </figure>
   
@@ -51,7 +51,7 @@
           </li>
   
         </ul>
-  <a href="/package/<%= packs[i]._id %>" class="card-text" style="text-align: center; padding-top: 10%;">Learn More</a>
+ 
       </div>
   
       <div class="card-price">
