--- a/pages/main/viewallpackages.ejs
+++ b/pages/main/viewallpackages.ejs
@@ -12,7 +12,7 @@
   <li>
     <div class="package-card">
   
-      <figure class="card-banner" loading="lazy">
+      <figure class="card-banner" >
         <img src="/assets/images/package1.jpg" alt= <%= packs[i].name %> loading="lazy" >
       </figure>
   
@@ -38,7 +38,7 @@
             <div class="meta-box">
               <ion-icon name="people"></ion-icon>
   
-              <p class="text">pax: 10</p>
+              <p class="text"><%= packs[i].capacity %> people</p>
             </div>
           </li>
   
